Fix macOS DMG build: Disable missing background image
- DMG builder was looking for non-existent background.tiff
- Set background to null to use default
- Fixes FileNotFoundError in dmgbuild

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -94,6 +94,7 @@
       "title": "OffGrid LLM Desktop ${version}",
       "writeUpdateInfo": false,
       "sign": false,
+      "background": null,
       "contents": [
         {
           "x": 130,
