Fix macOS DMG build - use backgroundColor instead of background: false

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -94,15 +94,19 @@
       "title": "OffGrid LLM Desktop ${version}",
       "writeUpdateInfo": false,
       "sign": false,
-      "background": false,
+      "backgroundColor": "#ffffff",
+      "window": {
+        "width": 540,
+        "height": 380
+      },
       "contents": [
         {
           "x": 130,
-          "y": 220
+          "y": 180
         },
         {
           "x": 410,
-          "y": 220,
+          "y": 180,
           "type": "link",
           "path": "/Applications"
         }
