--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "offgrid-llm"
+name = "offgrid"
 version = "0.1.0"
 description = "Python client for OffGrid LLM - Run AI models completely offline"
 readme = "README.md"
@@ -61,7 +61,7 @@ Issues = "https://github.com/takuphilchan/offgrid-llm/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["offgrid_llm*"]
+include = ["offgrid*"]
 
 [tool.black]
 line-length = 100
