--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -255,6 +255,52 @@ jobs:
           
           cmake --build . --config Release -j $(nproc 2>/dev/null || sysctl -n hw.ncpu 2>/dev/null || echo 4) --target llama-server
 
+      - name: Build whisper.cpp
+        shell: bash
+        run: |
+          git clone --depth 1 https://github.com/ggml-org/whisper.cpp /tmp/whisper.cpp
+          cd /tmp/whisper.cpp
+          echo "WHISPER_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          
+          mkdir build && cd build
+          cmake .. -DCMAKE_BUILD_TYPE=Release
+          cmake --build . --config Release -j $(nproc 2>/dev/null || sysctl -n hw.ncpu 2>/dev/null || echo 4)
+
+      - name: Download Piper
+        shell: bash
+        run: |
+          mkdir -p /tmp/piper
+          cd /tmp/piper
+          
+          PLATFORM="${{ matrix.platform }}"
+          ARCH="${{ matrix.arch }}"
+          
+          # Construct download URL based on platform/arch
+          if [ "$PLATFORM" = "linux" ]; then
+            if [ "$ARCH" = "amd64" ]; then
+              PIPER_URL="https://github.com/rhasspy/piper/releases/download/2023.11.14-2/piper_linux_x86_64.tar.gz"
+            else
+              PIPER_URL="https://github.com/rhasspy/piper/releases/download/2023.11.14-2/piper_linux_aarch64.tar.gz"
+            fi
+          elif [ "$PLATFORM" = "darwin" ]; then
+            if [ "$ARCH" = "arm64" ]; then
+              PIPER_URL="https://github.com/rhasspy/piper/releases/download/2023.11.14-2/piper_macos_aarch64.tar.gz"
+            else
+              PIPER_URL="https://github.com/rhasspy/piper/releases/download/2023.11.14-2/piper_macos_x64.tar.gz"
+            fi
+          elif [ "$PLATFORM" = "windows" ]; then
+            PIPER_URL="https://github.com/rhasspy/piper/releases/download/2023.11.14-2/piper_windows_amd64.zip"
+          fi
+          
+          echo "Downloading Piper from: $PIPER_URL"
+          curl -fsSL -o piper-archive "$PIPER_URL"
+          
+          if [[ "$PIPER_URL" == *.zip ]]; then
+            unzip piper-archive
+          else
+            tar -xzf piper-archive
+          fi
+
       - name: Build offgrid binary
         shell: bash
         env:
@@ -277,105 +323,185 @@ jobs:
           BUNDLE_NAME="offgrid-${VERSION}-${{ matrix.platform }}-${{ matrix.arch }}-${{ matrix.variant }}-${{ matrix.cpu_features }}"
           
           mkdir -p "$BUNDLE_NAME"
+          mkdir -p "$BUNDLE_NAME/audio/whisper"
+          mkdir -p "$BUNDLE_NAME/audio/piper"
           
-          # Copy binaries
+          # Copy main binaries
           if [ "${{ matrix.platform }}" = "windows" ]; then
             cp offgrid.exe "$BUNDLE_NAME/"
             cp /tmp/llama.cpp/build/bin/Release/llama-server.exe "$BUNDLE_NAME/" 2>/dev/null || \
               cp /tmp/llama.cpp/build/bin/llama-server.exe "$BUNDLE_NAME/"
+            
+            # Copy whisper binary
+            cp /tmp/whisper.cpp/build/bin/Release/whisper-cli.exe "$BUNDLE_NAME/audio/whisper/" 2>/dev/null || \
+              cp /tmp/whisper.cpp/build/bin/whisper-cli.exe "$BUNDLE_NAME/audio/whisper/" 2>/dev/null || true
+            
+            # Copy piper
+            cp -r /tmp/piper/piper/* "$BUNDLE_NAME/audio/piper/" 2>/dev/null || \
+              cp /tmp/piper/piper.exe "$BUNDLE_NAME/audio/piper/" 2>/dev/null || true
           else
             cp offgrid "$BUNDLE_NAME/"
             cp /tmp/llama.cpp/build/bin/llama-server "$BUNDLE_NAME/"
+            
+            # Copy whisper binary and libs
+            cp /tmp/whisper.cpp/build/bin/whisper-cli "$BUNDLE_NAME/audio/whisper/"
+            cp /tmp/whisper.cpp/build/src/*.so* "$BUNDLE_NAME/audio/whisper/" 2>/dev/null || \
+              cp /tmp/whisper.cpp/build/src/*.dylib "$BUNDLE_NAME/audio/whisper/" 2>/dev/null || true
+            cp /tmp/whisper.cpp/build/ggml/src/*.so* "$BUNDLE_NAME/audio/whisper/" 2>/dev/null || \
+              cp /tmp/whisper.cpp/build/ggml/src/*.dylib "$BUNDLE_NAME/audio/whisper/" 2>/dev/null || true
+            
+            # Create whisper wrapper script
+            if [ "${{ matrix.platform }}" = "linux" ]; then
+              cat > "$BUNDLE_NAME/audio/whisper/whisper" << 'WHISPER_EOF'
+#!/bin/bash
+SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+export LD_LIBRARY_PATH="$SCRIPT_DIR:$LD_LIBRARY_PATH"
+exec "$SCRIPT_DIR/whisper-cli" "$@"
+WHISPER_EOF
+            elif [ "${{ matrix.platform }}" = "darwin" ]; then
+              cat > "$BUNDLE_NAME/audio/whisper/whisper" << 'WHISPER_EOF'
+#!/bin/bash
+SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+export DYLD_LIBRARY_PATH="$SCRIPT_DIR:$DYLD_LIBRARY_PATH"
+exec "$SCRIPT_DIR/whisper-cli" "$@"
+WHISPER_EOF
+            fi
+            chmod +x "$BUNDLE_NAME/audio/whisper/whisper" "$BUNDLE_NAME/audio/whisper/whisper-cli"
+            
+            # Copy piper
+            cp -r /tmp/piper/piper/* "$BUNDLE_NAME/audio/piper/" 2>/dev/null || \
+              cp /tmp/piper/piper "$BUNDLE_NAME/audio/piper/" 2>/dev/null || true
+            chmod +x "$BUNDLE_NAME/audio/piper/"* 2>/dev/null || true
           fi
           
           # Create install script
           if [ "${{ matrix.platform }}" != "windows" ]; then
             cat > "$BUNDLE_NAME/install.sh" << 'EOF'
-          #!/bin/bash
-          set -e
-          SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-          
-          echo "Installing OffGrid LLM..."
-          sudo cp "$SCRIPT_DIR/offgrid" /usr/local/bin/offgrid
-          sudo cp "$SCRIPT_DIR/llama-server" /usr/local/bin/llama-server
-          sudo chmod +x /usr/local/bin/offgrid /usr/local/bin/llama-server
-          
-          echo "✓ Installed to /usr/local/bin"
-          echo ""
-          echo "Get started:"
-          echo "  offgrid --version"
-          echo "  offgrid search llama --limit 5"
-          EOF
+#!/bin/bash
+set -e
+SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+AUDIO_DIR="$HOME/.offgrid-llm/audio"
+
+echo "Installing OffGrid LLM..."
+
+# Install main binaries
+sudo cp "$SCRIPT_DIR/offgrid" /usr/local/bin/offgrid
+sudo cp "$SCRIPT_DIR/llama-server" /usr/local/bin/llama-server
+sudo chmod +x /usr/local/bin/offgrid /usr/local/bin/llama-server
+
+# Install audio components
+echo "Installing audio components..."
+mkdir -p "$AUDIO_DIR/whisper" "$AUDIO_DIR/piper"
+
+if [ -d "$SCRIPT_DIR/audio/whisper" ]; then
+  cp -r "$SCRIPT_DIR/audio/whisper/"* "$AUDIO_DIR/whisper/"
+  chmod +x "$AUDIO_DIR/whisper/"* 2>/dev/null || true
+  echo "✓ Whisper (speech-to-text) installed"
+fi
+
+if [ -d "$SCRIPT_DIR/audio/piper" ]; then
+  cp -r "$SCRIPT_DIR/audio/piper/"* "$AUDIO_DIR/piper/"
+  chmod +x "$AUDIO_DIR/piper/"* 2>/dev/null || true
+  echo "✓ Piper (text-to-speech) installed"
+fi
+
+# Install web UI
+WEB_DIR="/var/lib/offgrid/web/ui"
+if [ -d "$SCRIPT_DIR/web/ui" ]; then
+  sudo mkdir -p "$WEB_DIR"
+  sudo cp -r "$SCRIPT_DIR/web/ui/"* "$WEB_DIR/"
+  echo "✓ Web UI installed"
+fi
+
+echo ""
+echo "✓ OffGrid LLM installed successfully!"
+echo ""
+echo "Get started:"
+echo "  offgrid --version"
+echo "  offgrid serve              # Start server with Web UI"
+echo "  offgrid search llama       # Search for models"
+EOF
             chmod +x "$BUNDLE_NAME/install.sh"
+          fi
+          
+          # Copy web UI to bundle
+          if [ -d "web/ui" ]; then
+            mkdir -p "$BUNDLE_NAME/web/ui"
+            cp -r web/ui/* "$BUNDLE_NAME/web/ui/"
           fi
           
           # Create README
           cat > "$BUNDLE_NAME/README.md" << EOF
-          # OffGrid LLM ${VERSION}
-          
-          **Platform:** ${{ matrix.name }}
-          **llama.cpp:** ${{ env.LLAMA_COMMIT }}
-          
-          ## Installation
-          
-          EOF
+# OffGrid LLM ${VERSION}
+
+**Platform:** ${{ matrix.name }}
+**llama.cpp:** ${{ env.LLAMA_COMMIT }}
+**whisper.cpp:** ${{ env.WHISPER_COMMIT }}
+
+## Installation
+EOF
           
           if [ "${{ matrix.platform }}" = "windows" ]; then
             cat >> "$BUNDLE_NAME/README.md" << 'EOF'
-          ### Windows
-          1. Extract this archive
-          2. Add the directory to your PATH, or
-          3. Copy `offgrid.exe` and `llama-server.exe` to a directory in your PATH
-          
-          ```powershell
-          # Example: Copy to a standard location
-          Copy-Item offgrid.exe C:\Windows\System32\
-          Copy-Item llama-server.exe C:\Windows\System32\
-          ```
-          EOF
+### Windows
+1. Extract this archive
+2. Run the installer or manually copy binaries to your PATH
+
+```powershell
+# Copy main binaries
+Copy-Item offgrid.exe C:\Program Files\OffGrid\
+Copy-Item llama-server.exe C:\Program Files\OffGrid\
+
+# Audio binaries are in audio\ folder
+```
+EOF
           else
             cat >> "$BUNDLE_NAME/README.md" << 'EOF'
-          ### Linux / macOS
-          ```bash
-          ./install.sh
-          ```
-          
-          Or manually:
-          ```bash
-          sudo cp offgrid /usr/local/bin/
-          sudo cp llama-server /usr/local/bin/
-          sudo chmod +x /usr/local/bin/{offgrid,llama-server}
-          ```
-          EOF
+### Linux / macOS
+```bash
+./install.sh
+```
+
+This installs:
+- offgrid and llama-server to /usr/local/bin
+- whisper.cpp and piper to ~/.offgrid-llm/audio/
+- Web UI to /var/lib/offgrid/web/ui/
+EOF
           fi
           
           cat >> "$BUNDLE_NAME/README.md" << 'EOF'
-          
-          ## Getting Started
-          
-          ```bash
-          # Verify installation
-          offgrid --version
-          
-          # Search for models
-          offgrid search llama --limit 5
-          
-          # Download a model
-          offgrid download-hf bartowski/Llama-3.2-3B-Instruct-GGUF \
-            --file Llama-3.2-3B-Instruct-Q4_K_M.gguf
-          
-          # Start chatting
-          offgrid run Llama-3.2-3B-Instruct-Q4_K_M
-          ```
-          
-          ## Web UI
-          
-          Access at: http://localhost:11611/ui
-          
-          ## Documentation
-          
-          https://github.com/takuphilchan/offgrid-llm
-          EOF
+
+## Getting Started
+
+```bash
+# Verify installation
+offgrid --version
+
+# Start server with Web UI
+offgrid serve
+
+# Search for models
+offgrid search llama --limit 5
+
+# Download a model
+offgrid download-hf bartowski/Llama-3.2-3B-Instruct-GGUF \
+  --file Llama-3.2-3B-Instruct-Q4_K_M.gguf
+
+# Start chatting
+offgrid run Llama-3.2-3B-Instruct-Q4_K_M
+```
+
+## Features
+
+- **LLM Inference**: Chat with local AI models
+- **Speech-to-Text**: Transcribe audio with whisper.cpp
+- **Text-to-Speech**: Generate speech with Piper
+- **Web UI**: Access at http://localhost:11611/ui
+
+## Documentation
+
+https://github.com/takuphilchan/offgrid-llm
+EOF
           
           # Create checksums (use shasum on macOS, sha256sum on Linux)
           cd "$BUNDLE_NAME"
