--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -70,7 +70,7 @@ jobs:
         include:
           # Linux variants - AVX2 (compatible with most CPUs from 2013+)
           - name: linux-amd64-cpu-avx2
-            os: ubuntu-22.04
+            os: ubuntu-24.04
             platform: linux
             arch: amd64
             variant: cpu
@@ -79,7 +79,7 @@ jobs:
             cpu_flags: "-march=x86-64-v3 -mno-avx512f"
             
           - name: linux-amd64-vulkan-avx2
-            os: ubuntu-22.04
+            os: ubuntu-24.04
             platform: linux
             arch: amd64
             variant: vulkan
@@ -89,7 +89,7 @@ jobs:
             
           # Linux variants - AVX-512 (newer Intel CPUs)
           - name: linux-amd64-cpu-avx512
-            os: ubuntu-22.04
+            os: ubuntu-24.04
             platform: linux
             arch: amd64
             variant: cpu
@@ -98,7 +98,7 @@ jobs:
             cpu_flags: "-march=x86-64-v4"
             
           - name: linux-amd64-vulkan-avx512
-            os: ubuntu-22.04
+            os: ubuntu-24.04
             platform: linux
             arch: amd64
             variant: vulkan
@@ -107,7 +107,7 @@ jobs:
             cpu_flags: "-march=x86-64-v4"
             
           - name: linux-arm64-cpu
-            os: ubuntu-22.04
+            os: ubuntu-24.04
             platform: linux
             arch: arm64
             variant: cpu
@@ -171,7 +171,7 @@ jobs:
           
           # Install Vulkan SDK if needed
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools glslc
+            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools glslang-dev
           fi
 
       - name: Install dependencies (macOS)
