--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -171,7 +171,11 @@ jobs:
           
           # Install Vulkan SDK if needed
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            sudo apt-get install -y libvulkan1 libvulkan-dev vulkan-tools glslang-tools glslang-dev
+            # Install Vulkan SDK from LunarG for glslc
+            wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
+            sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list https://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
+            sudo apt-get update
+            sudo apt-get install -y vulkan-sdk
           fi
 
       - name: Install dependencies (macOS)
@@ -580,7 +584,7 @@ jobs:
       matrix:
         include:
           - os: linux
-            runner: ubuntu-24.04
+            runner: ubuntu-22.04
             build_script: build:linux
             
           - os: macos
