--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -171,9 +171,9 @@ jobs:
           
           # Install Vulkan SDK if needed
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            # Install Vulkan SDK from LunarG for glslc
+            # Install Vulkan SDK from LunarG for glslc (use jammy for Ubuntu 22.04)
             wget -qO- https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo tee /etc/apt/trusted.gpg.d/lunarg.asc
-            sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-noble.list https://packages.lunarg.com/vulkan/lunarg-vulkan-noble.list
+            sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-jammy.list https://packages.lunarg.com/vulkan/lunarg-vulkan-jammy.list
             sudo apt-get update
             sudo apt-get install -y vulkan-sdk
           fi
