fix: standardize all Linux builds on Ubuntu 24.04
- All Linux builds now use ubuntu-24.04 (GLIBC 2.38)
- CPU and Vulkan builds consistent
- Installer checks GLIBC 2.38+ and fails early with helpful message
- Points users to ./dev/install.sh for older systems
- Auto-detects GPU for Vulkan acceleration
- Updated INSTALLATION.md with system requirements table

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -68,7 +68,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Linux variants - AVX2 (compatible with most CPUs from 2013+)
+          # Linux builds on Ubuntu 24.04 (GLIBC 2.38)
+          # For older systems, build from source: ./dev/install.sh
           - name: linux-amd64-cpu-avx2
             os: ubuntu-24.04
             platform: linux
@@ -87,7 +88,6 @@ jobs:
             gpu_flags: "-DGGML_VULKAN=ON"
             cpu_flags: "-march=x86-64-v3 -mno-avx512f"
             
-          # Linux variants - AVX-512 (newer Intel CPUs)
           - name: linux-amd64-cpu-avx512
             os: ubuntu-24.04
             platform: linux
