fix: use ZIP instead of DMG for macOS desktop builds
DMG builder has race condition issues on GitHub Actions.
ZIP is more reliable and works the same for users.

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -80,7 +80,7 @@
       ],
       "target": [
         {
-          "target": "dmg",
+          "target": "zip",
           "arch": ["x64", "arm64"]
         }
       ],
