chore: use linguist-generated for HTML files

--- a/.gitattributes
+++ b/.gitattributes
@@ -24,9 +24,9 @@ go.sum text eol=lf
 *.exe binary
 
 # Linguist overrides for GitHub language statistics
-# Mark large HTML UI files as vendored so Go is shown as primary language
-web/ui/index.html linguist-vendored
-desktop/index.html linguist-vendored
+# Mark large HTML UI files as generated so Go is shown as primary language
+web/ui/index.html linguist-generated
+desktop/index.html linguist-generated
 desktop/node_modules/** linguist-vendored
 
 # Mark Python package info as generated
