--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,27 @@ docs/paper.tex
 docs/PAPER.md
 docs/PAPER_README.md
 *.pdf
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
