fix: pin whisper.cpp to v1.7.5 to avoid ARM build bug
The latest main branch of whisper.cpp has a missing function
decode_q4_Kx8_scales_mins in ggml-cpu/arch/arm/repack.cpp that
breaks ARM builds on macOS runners.

Pin to stable v1.7.5 release until upstream fixes the issue.

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -276,7 +276,8 @@ jobs:
       - name: Build whisper.cpp
         shell: bash
         run: |
-          git clone --depth 1 https://github.com/ggml-org/whisper.cpp /tmp/whisper.cpp
+          # Use stable release tag to avoid upstream bugs in main branch
+          git clone --depth 1 --branch v1.7.5 https://github.com/ggml-org/whisper.cpp /tmp/whisper.cpp
           cd /tmp/whisper.cpp
           echo "WHISPER_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           
