--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -284,7 +284,8 @@ jobs:
           mkdir build && cd build
           
           # Build with static linking for Linux (GLIBC compatibility)
-          CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF"
+          # Use GGML_NATIVE=OFF to avoid CPU feature detection issues on macOS ARM runners
+          CMAKE_ARGS="-DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DGGML_NATIVE=OFF"
           if [ "${{ matrix.platform }}" = "linux" ]; then
             STATIC_FLAGS="-static-libgcc -static-libstdc++"
             CMAKE_ARGS="$CMAKE_ARGS -DCMAKE_C_FLAGS=\"$STATIC_FLAGS\" -DCMAKE_CXX_FLAGS=\"$STATIC_FLAGS\""
