--- a/web/ui/manifest.json
+++ b/web/ui/manifest.json
@@ -9,15 +9,15 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "/ui/assets/icon-192.png",
+      "src": "/ui/assets/icon-192.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/ui/assets/icon-512.png",
+      "src": "/ui/assets/icon-192.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     }
   ],
