--- a/docker/Dockerfile.gpu
+++ b/docker/Dockerfile.gpu
@@ -1,20 +1,18 @@
-# OffGrid LLM - Production Docker Image
-# Multi-stage build for optimized image size
-# Build from project root: docker build -f docker/Dockerfile -t offgrid-llm .
+# OffGrid LLM - GPU Docker Image (NVIDIA CUDA)
+# Build from project root: docker build -f docker/Dockerfile.gpu -t offgrid-llm:gpu .
 
 # =============================================================================
 # Stage 1: Build the Go binary
 # =============================================================================
-FROM golang:1.21-alpine AS go-builder
+FROM golang:1.21-bookworm AS go-builder
 
 # Install build dependencies
-RUN apk add --no-cache \
+RUN apt-get update && apt-get install -y \
     git \
     make \
     gcc \
     g++ \
-    musl-dev \
-    linux-headers
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /build
 
@@ -28,48 +26,50 @@ COPY internal/ ./internal/
 COPY pkg/ ./pkg/
 COPY web/ ./web/
 
-# Build the application with static linking
+# Build the application
 RUN CGO_ENABLED=1 GOOS=linux go build \
     -a -ldflags '-extldflags "-static"' \
     -o offgrid ./cmd/offgrid/
 
 # =============================================================================
-# Stage 2: Build llama.cpp server
+# Stage 2: Build llama.cpp with CUDA support
 # =============================================================================
-FROM alpine:latest AS llama-builder
+FROM nvidia/cuda:12.2.0-devel-ubuntu22.04 AS llama-builder
 
-RUN apk add --no-cache \
+RUN apt-get update && apt-get install -y \
     git \
     cmake \
     make \
     g++ \
-    linux-headers
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /build
 
-# Clone and build llama.cpp
+# Clone and build llama.cpp with CUDA
 RUN git clone --depth 1 https://github.com/ggerganov/llama.cpp.git && \
     cd llama.cpp && \
-    cmake -B build -DGGML_STATIC=ON -DLLAMA_BUILD_SERVER=ON && \
+    cmake -B build \
+        -DGGML_CUDA=ON \
+        -DLLAMA_BUILD_SERVER=ON \
+        -DCMAKE_CUDA_ARCHITECTURES="60;70;75;80;86;89;90" && \
     cmake --build build --config Release -j$(nproc) --target llama-server && \
     strip build/bin/llama-server
 
 # =============================================================================
-# Stage 3: Final runtime image
+# Stage 3: Final runtime image with CUDA
 # =============================================================================
-FROM alpine:latest
+FROM nvidia/cuda:12.2.0-runtime-ubuntu22.04
 
 # Install runtime dependencies
-RUN apk add --no-cache \
+RUN apt-get update && apt-get install -y \
     ca-certificates \
     curl \
     wget \
-    libstdc++ \
-    libgcc
+    && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user
-RUN addgroup -g 1000 offgrid && \
-    adduser -D -u 1000 -G offgrid offgrid
+RUN groupadd -g 1000 offgrid && \
+    useradd -u 1000 -g offgrid -m offgrid
 
 # Create required directories
 RUN mkdir -p /var/lib/offgrid/models \
@@ -103,7 +103,8 @@ ENV OFFGRID_MODELS_DIR=/var/lib/offgrid/models \
     OFFGRID_DATA_DIR=/var/lib/offgrid/data \
     OFFGRID_BIN_DIR=/var/lib/offgrid/bin \
     OFFGRID_PORT=11611 \
-    OFFGRID_HOST=0.0.0.0
+    OFFGRID_HOST=0.0.0.0 \
+    OFFGRID_GPU_LAYERS=99
 
 # Run the server
 CMD ["/usr/local/bin/offgrid"]
