--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,12 @@
 # OffGrid LLM - Docker Compose Configuration
 # Quick Start: docker-compose up -d
-# Documentation: See DOCKER_README.md and docs/DOCKER.md
-
-version: '3.8'
+# Documentation: See DOCKER_README.md and docs/setup/docker.md
 
 services:
   offgrid:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     image: offgrid-llm:latest
     container_name: offgrid-llm
     restart: unless-stopped
@@ -19,23 +17,23 @@ services:
       - offgrid-models:/var/lib/offgrid/models
       # Persist session data
       - offgrid-data:/var/lib/offgrid/data
-      # Optional: Mount local models directory
+      # Optional: Mount local models directory (uncomment to use)
       # - ./models:/var/lib/offgrid/models
     environment:
       - OFFGRID_PORT=11611
       - OFFGRID_HOST=0.0.0.0
       - OFFGRID_MODELS_DIR=/var/lib/offgrid/models
-      # Optional: Configure GPU layers (0 = CPU only)
+      - OFFGRID_DATA_DIR=/var/lib/offgrid/data
+      - OFFGRID_BIN_DIR=/var/lib/offgrid/bin
+      # GPU layers (0 = CPU only, increase for GPU)
       - OFFGRID_GPU_LAYERS=0
-      # Optional: Enable mock engine for testing
-      # - OFFGRID_MOCK_ENGINE=false
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:11611/health"]
       interval: 30s
       timeout: 3s
       retries: 3
-      start_period: 10s
-    # For GPU support (NVIDIA)
+      start_period: 30s
+    # Uncomment for GPU support (NVIDIA)
     # deploy:
     #   resources:
     #     reservations:
@@ -43,20 +41,6 @@ services:
     #         - driver: nvidia
     #           count: 1
     #           capabilities: [gpu]
-
-  # Optional: Add a reverse proxy with SSL
-  # nginx:
-  #   image: nginx:alpine
-  #   container_name: offgrid-nginx
-  #   restart: unless-stopped
-  #   ports:
-  #     - "443:443"
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./certs:/etc/nginx/certs:ro
-  #   depends_on:
-  #     - offgrid
 
 volumes:
   offgrid-models:
